@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer2/mplayer2-9999.ebuild,v 1.46 2012/09/27 23:02:48 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer2/mplayer2-9999.ebuild,v 1.57 2013/05/16 19:14:38 ulm Exp $
 
 EAPI=5
 
@@ -22,12 +22,12 @@ LICENSE="GPL-3"
 SLOT="0"
 [[ ${PV} == *9999* ]] || \
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
-IUSE="+a52 +alsa aqua bindist bluray bs2b cddb +cdio cpudetection debug
+IUSE="+a52 +alsa aqua bluray bs2b cddb +cdio cpudetection debug
 directfb doc +dts +dv dvb +dvd +dvdnav +enca +faad fbcon ftp gif +iconv
 ipv6 jack joystick jpeg kernel_linux ladspa lcms +libass libcaca lirc mad
 md5sum mng +mp3 +network nut +opengl oss png pnm portaudio +postproc
 pulseaudio pvr +quicktime quvi radio +rar +real +rtc samba sdl +speex tga
-+theora +unicode v4l vcd vdpau +vorbis win32codecs +X xanim xinerama
++theora +unicode v4l vcd vdpau +vorbis +X xanim xinerama
 +xscreensaver +xv xvid yuv4mpeg
 "
 IUSE+=" symlink"
@@ -37,9 +37,7 @@ for x in ${CPU_FEATURES}; do
 	IUSE+=" ${x}"
 done
 
-# bindist does not cope with win32codecs, which are nonfree
 REQUIRED_USE="
-	bindist? ( !win32codecs )
 	cddb? ( cdio network )
 	dvdnav? ( dvd )
 	lcms? ( opengl )
@@ -56,11 +54,6 @@ REQUIRED_USE="
 RDEPEND+="
 	sys-libs/ncurses
 	sys-libs/zlib
-	!bindist? (
-		x86? (
-			win32codecs? ( media-libs/win32codecs )
-		)
-	)
 	X? (
 		x11-libs/libXext
 		x11-libs/libXxf86vm
@@ -316,10 +309,7 @@ src_configure() {
 	#################
 	# Binary codecs #
 	#################
-	# bug 213836
-	if ! use x86 || ! use win32codecs; then
-		use quicktime || myconf+=" --disable-qtx"
-	fi
+	use quicktime || myconf+=" --disable-qtx"
 
 	######################
 	# RealPlayer support #
@@ -338,7 +328,7 @@ src_configure() {
 		use x86 && myconf+=" --codecsdir=/opt/RealPlayer/codecs"
 		use amd64 && myconf+=" --codecsdir=/usr/$(get_libdir)/codecs"
 	fi
-	myconf+=" $(use_enable win32codecs win32dll)"
+	myconf+=" --disable-win32dll"
 
 	################
 	# Video Output #
